1.3.22
More work on absorption overlay (#115)

1.3.21
Added: Config to set difficulty level with Game Stages. You can set a specific difficulty level for any number of stages, and the largest is chosen. Overrides any other changes to difficulty.
Added: Absorption override, WIP (#115)
Fixed: Medkit recipe missing (changed it slightly because JSON)

1.3.20
Refactoring stuff to prepare for 1.13.
Changed: Max health cap is now changed in main.cfg.
Changed: No longer a coremod, found a better solution.
Changed: Switched to JSON recipes

1.3.19
Fixed (maybe): More unkillable mobs (#117)

1.3.18
Fixed: Mobs being unkillable if max difficulty is zero (#116)

1.3.17
Added: Config to blacklist/whitelist specific mobs with the "Always Blight" mode (#102)
Changed: Revert health text being disabled when custom heart rendering is disabled (#113)
Changed: Idle multiplier now accepts negative values (#112)
Fixed: The "get" commands not checking the right player (#111)
Fixed: Damage scaling sometimes applying infinite damage to the player, resulting in the player being unkillable (#110)

1.3.16
Added: Configs to apply the new damage scaling system to mobs (#99)
Changed: Commands have been reworked! You can now specify whether you want to get/set/add/sub the value. Fully supports the "@" notation now, you can even affect multiple players with one command (in theory). And tab completion works better. (#107, #72)
Fixed: Kill command having some strange effects if outOfWorld damage is scaled (#110)

1.3.15
Added: Configs to scale damage taken with either max health or player/area difficulty. How steeply damage amounts scale can be set for each damage source. You can add mod sources to the list too, you just need to know their damage type string (trying enabling debug mode, get hurt by it, then check the log). Check your spelling, there's no way for me to detect a source that doesn't exist. (#99)
Added: Config to make every mob spawn as a blight (be careful with that) (#102)