@@ -1,5 +1,6 @@
 1.3.22
 More work on absorption overlay (#115)
+Added: Config to set player max health based on their XP level (#119)
 
 1.3.21
 Added: Config to set difficulty level with Game Stages. You can set a specific difficulty level for any number of stages, and the largest is chosen. Overrides any other changes to difficulty.
